[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/hull2.png" type="Texture" id=1]
[ext_resource path="res://assets/hull3.png" type="Texture" id=2]
[ext_resource path="res://assets/sails_lateen33.png" type="Texture" id=3]
[ext_resource path="res://assets/hull1.png" type="Texture" id=4]
[ext_resource path="res://runtime/StackAn.gd" type="Script" id=5]
[ext_resource path="res://assets/big_full.png" type="Texture" id=6]
[ext_resource path="res://assets/big_pennant.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 19, 70 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 19, 0, 19, 70 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 38, 0, 19, 70 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 57, 0, 19, 70 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 70, 19, 70 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 19, 70, 19, 70 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 38, 70, 19, 70 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 57, 70, 19, 70 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 140, 19, 70 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 19, 140, 19, 70 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 38, 140, 19, 70 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 57, 140, 19, 70 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 210, 19, 70 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 19, 210, 19, 70 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 38, 210, 19, 70 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="StackAn" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( -4, 53 )
scale = Vector2( 1.09766, 1 )
texture = ExtResource( 6 )
flip_v = true

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( -1, 55 )
scale = Vector2( 0.6, 0.75 )
texture = ExtResource( 6 )
flip_v = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.10585, 52.6348 )
rotation = -3.14159
frames = SubResource( 16 )
frame = 8
playing = true
offset = Vector2( -0.105843, 34.6348 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 0, 202 )
scale = Vector2( 0.849342, 0.825556 )
texture = ExtResource( 3 )
flip_v = true

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( -1, -96 )
scale = Vector2( 0.929688, 0.825556 )
texture = ExtResource( 6 )
flip_v = true

[node name="Sprite9" type="Sprite" parent="."]
position = Vector2( -1.78814e-07, -94 )
scale = Vector2( 0.510938, 0.621094 )
texture = ExtResource( 6 )
flip_v = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 0.0536957, -95.5866 )
rotation = 3.14159
scale = Vector2( 1, 1.11441 )
frames = SubResource( 16 )
frame = 8
playing = true
offset = Vector2( 0.0536995, 34.4696 )
